--- a/package.json
+++ b/package.json
@@ -10,24 +10,22 @@
   },
   "author": "Hafiz Abdullah Tariq",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
-    "dotenv": "^16.0.0",
-    "ejs": "^3.1.7",
-    "express": "^4.18.1",
-    "express-rate-limit": "^6.4.0",
-    "helmet": "^5.0.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "sequelize": "^6.19.0",
-    "sqlite3": "^5.0.6"
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16",
-    "sequelize-cli": "^6.4.1"
+    "jest": "^29.5.0",
+    "jsdoc": "^4.0.2",
+    "nodemon": "^2.0.16"
   }
 }
