--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "seed": "npx sequelize db:migrate && npx sequelize db:seed:all",
+    "eslint": "eslint server/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Hafiz Abdullah Tariq",
   "dependencies": {
+    "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -19,11 +20,11 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.41.0",
     "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
     "nodemon": "^2.0.16"
